chore: add helix website configs

--- a/static_files/helix-relay-config/config.yaml.tmpl
+++ b/static_files/helix-relay-config/config.yaml.tmpl
@@ -36,3 +36,11 @@ network_config:
 # If empty, all routes are enabled
 router_config:
   enabled_routes: []
+
+website:
+  enabled: true
+  port: 8080
+  listen_address: "0.0.0.0"
+  network_name: "kurtosis"
+  relay_url: http://0xa55c1285d84ba83a5ad26420cd5ad3091e49c55a813eee651cd467db38a8c8e63192f47955e9376f6b42f6d190571cb5@helix-relay:4040
+  relay_pubkey: 0xa55c1285d84ba83a5ad26420cd5ad3091e49c55a813eee651cd467db38a8c8e63192f47955e9376f6b42f6d190571cb5
